Copy static site from wk svn

--- a/webapp/static/caseStudiesTemplate.html
+++ b/webapp/static/caseStudiesTemplate.html
@@ -18,7 +18,7 @@
 			<div id="navListContainer">
 				<ul id="navList" class="cms">
 					<li id="dashboard" class="label">
-						<a href="#" class="univers">Dashboard</a>
+						<a href="dashboardTemplate.html" class="univers">Dashboard</a>
 					</li>
 					<li id="caseStudies" class="label">
 						<a href="#" class="univers">Case Studies</a>
@@ -38,12 +38,12 @@
 			<!-- end of Navigation -->	
 			
 			<ul id="sectionTabs">
-				<li id="allCaseSection">
+				<li>
 					<div class="left"></div>
 					<a class="univers" href="#">Case Studies</a>
 					<div class="right"></div>
 				</li>
-				<li id="awardsSection">
+				<li>
 					<div class="left"></div>
 					<a class="univers" href="#">Award Entries</a>
 					<div class="right"></div>
@@ -184,6 +184,7 @@
 	<script type="text/javascript" src="library/js/cufon-yui.js"></script>
 	<script type="text/javascript" src="library/js/Univers_LT_Std_300.font.js"></script>
 	<!-- Page -->
+	<script type="text/javascript" src="library/js/swfaddress.js"></script>
 	<script type="text/javascript" src="library/js/caseStudies.min.js"></script>
 	
     <script type="text/javascript">
